--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .DS_Store
 .DS_Store?
+C1 - Azure Infrastructure Operations/project/Terraform/.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.43.0/windows_amd64/terraform-provider-azurerm_v3.43.0_x5.exe
